# woale

./: .gitignore  AUTHOR  CHANGELOG.md  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile  README.md  configure.py
cmake/: FindCgic.cmake  FindCgicc.cmake  FindLibGit2.cmake  FindSqlite.cmake  LocalCmakeConfig.cmake
data/: CMakeLists.txt
data/doc/: schema-sqlite.sql
data/share/: main.css
data/share/woale/: main.css
data/sql/: schema-sqlite.sql
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.md  footer.html
etc/: CMakeLists.txt  woale.conf.in
src/: CMakeLists.txt  Makefile  config.h.in  dbconn.cc  dbconn.h  fileparser.c  fileparser.cc  fileparser.h  main.c  main.cc  woale_confparser.cc  woale_confparser.h
src/cli/: CMakeLists.txt  main.c
src/cmake/: LocalCmakeConfig.cmake
